syntax = "proto2";

package Zko;

enum ZkBaseType {
  BYTE = 0;
  UBYTE = 1;
  SHORT = 2;
  USHORT = 3;
  INT = 4;
  UINT = 5;
  FLOAT = 6;
  DOUBLE = 7;
  TEXTURE = 8;
}

enum ZkFormatType {
  SCALAR = 0;

  VEC2 = 1;
  VEC3 = 2;
  VEC4 = 3;

  MAT2 = 4;
  MAT3 = 5;
  MAT4 = 6;

  TEXTURE = 7;
}

/**
This type will merge two concepts, the base type used
and the format provided by that type
This will be useful for scenarios where we need to handle the base type
but we don't need to know how it is expressed
 */
message ZkDataType {
  required ZkBaseType type = 1;
  required ZkFormatType format = 2;
}